# schach

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
includes/: board.hpp  helper.hpp  piece.hpp
script/: bootstrap  bootstrap.ps1  setup  setup.ps1  update  update.ps1
src/: bitboard.rs  board.cpp  crc.rs  engine.rs  main.cpp  main.rs  move_info.rs  position.rs  renderer.rs
